--- a/post/docker-compose.yml
+++ b/post/docker-compose.yml
@@ -48,6 +48,41 @@ services:
       - ${DATABASE_MYSQL_EXPORTER_PORT} # Portal do mysql exporter
     depends_on:
       - database
+  zookeeper:
+    image: ${ZOOKEEPER_IMAGE}
+    networks: 
+      - broker-kafka
+    environment:
+      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT}
+      ZOOKEEPER_TICK_TIME: ${ZOOKEEPER_TIME}
+  kafka:
+    image: ${KAFKA_IMAGE}
+    networks: 
+      - broker-kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - ${KAFKA_PORT}:${KAFKA_PORT}
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:${KAFKA_PORT}
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  kafdrop:
+    image: ${KAFDROP_IMAGE}
+    networks: 
+      - broker-kafka
+    depends_on:
+      - kafka
+    ports:
+      - ${KAFDROP_PORT}:${KAFDROP_PORT}
+    environment:
+      KAFKA_BROKERCONNECT: kafka:29092
 volumes:
   grafana_data:
   prometheus_data:
+networks: 
+  broker-kafka:
+    driver: bridge  
