--- a/post/docker-compose.yml
+++ b/post/docker-compose.yml
@@ -16,11 +16,16 @@ services:
   prometheus:
     image: ${PROMETHEUS_IMAGE} # Imagem do Prometheus
     container_name: ${PROMETHEUS_CONTAINER_NAME} # Nome do container
-    restart: always
     ports:
       - ${PROMETHEUS_PORT} # Portal local e porta do docker
     volumes:
       - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    deploy:
+      placement:
+        constraints:
+          - node.role==manager
+      restart_policy:
+        condition: on-failure
   grafana:
     image: ${GRAFANA_IMAGE} # Imagem do grafana
     container_name: ${GRAFANA_CONTAINER_NAME} # Nome do container
