--- a/post/docker/prometheus/prometheus.yml
+++ b/post/docker/prometheus/prometheus.yml
@@ -1,5 +1,3 @@
-global:
-  scrape_interval: 15s
 scrape_configs:
   - job_name: "mysql"
     metrics_path: /metrics
@@ -7,3 +5,17 @@ scrape_configs:
     scrape_timeout: 10s
     static_configs:
       - targets: ["mysql_exporter:9104"]
+  - job_name: node
+    static_configs:
+      - targets: ['node_exporter:9100']
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
+  - job_name: 'kafka'
+    static_configs:
+      - targets: ['kafka_exporter:9308']
+  - job_name: 'prometheus'
+    scrape_interval: 120s
+    static_configs:
+      - targets: ['localhost:9090','cadvisor:8080','node_exporter:9100']
