--- a/post/app/requirements.txt
+++ b/post/app/requirements.txt
@@ -3,13 +3,17 @@ cfgv==3.4.0
 dill==0.3.8
 distlib==0.3.8
 filelock==3.14.0
+greenlet==3.0.3
 identify==2.5.36
 isort==5.13.2
 mccabe==0.7.0
+mysql-connector-python==8.4.0
 nodeenv==1.8.0
 platformdirs==4.2.1
 pre-commit==3.7.0
 pylint==3.1.0
 PyYAML==6.0.1
+SQLAlchemy==2.0.29
 tomlkit==0.12.4
+typing_extensions==4.11.0
 virtualenv==20.26.1
